Wrap fix 2

--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,23 @@
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .testimonial {
-      flex-direction: column; /* Stack text and video on smaller screens */
+      flex-direction: column; 
       align-items: flex-start;
     }
     
     .testimonial-video iframe {
       max-width: 100%;
     }
+  } */
+
+@media (max-width: 992px) {
+  .video-card {
+    grid-template-columns: repeat(2, 1fr); /
   }
+}
+  
+
+@media (max-width: 576px) {
+  .video-card {
+    grid-template-columns: 1fr; 
+  }
+}
