--- a/css/style.css
+++ b/css/style.css
@@ -304,9 +304,9 @@ body {
 }
 
 .video-card {
-  display: flex;
-  column-gap: 15px;
-  row-gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 /* Get Started */
